--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# vim temp files
+**/*.swp
+
+#mac temp files
+**/.DS_Store
